--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dev": "nodemon index"
   },
   "dependencies": {
+    "cors": "^2.8.6",
     "express": "^5.2.1",
     "mysql": "^2.18.1"
   },
